# ice

./: Cargo.toml  PKGBUILD  README.md  bacon.toml  todo.norg
.github/workflows/: release.yml
src/: analyze.rs  base.rs  caesar.rs  cli.rs  constants.rs  extract.rs  general.rs  hasher.rs  lib.rs  main.rs  manipulation.rs  morse.rs  services.rs  utils.rs  xor.rs
src/analysis/: extract.rs  mod.rs
src/app/: cli.rs  mod.rs
src/base/: base.rs
src/ciphers/: mod.rs
src/ciphers/general/: general.rs
src/utils/: utils.rs
