[package]
name = "ice"
version = "0.1.0"
edition = "2021"
authors = ["tamton-aquib <aquibjavedt007@gmail.com>"]

[dependencies]
hex = "0.4.3"
base64 = "0.20"
base32 = "0.4"
regex = "1.6"
atty = "0.2.14"
clap = { version = "4.5.4", features = ["derive"] }
lazy_static = "1.4"
urlencoding = "2.1.3"
ureq = "1.3"
serde = "1.0"
serde_json = "1.0"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
