[package]
name = "ice"
version = "0.3.0"
edition = "2021"
authors = ["tamton-aquib <aquibjavedt007@gmail.com>"]
license = "MIT"
description = "A simple CTF tool store"
homepage = "https://github.com/tamton-aquib/ice"
repository = "https://github.com/tamton-aquib/ice"
readme = "README.md"
keywords = ["ctf", "pwnable", "security", "hacking"]


[dependencies]
hex = "0.4.3"
base64 = "0.20"
base32 = "0.4"
regex = "1.6"
atty = "0.2.14"
pico-args = "0.5.0"
lazy_static = "1.4"
urlencoding = "2.1.3"
ureq = "1.3"
serde = "1.0"
serde_json = "1.0"
md-5 = "0.10.6"
sha1 = "0.10.6"
sha2 = "0.10.8"
digest = "0.10.7"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
